# blog

./: .gitignore  _brand.yml  _config.yml  _quarto.yml  index.qmd  pyproject.toml  styles.css
.github/workflows/: deploy.yml
_posts/: 2024-01-07-CNSUM.md  2024-01-14-DSSUM.md  2024-01-21-OSSUM.md  2024-01-28-SESUM.md  2024-02-05-DesignPattern.md  2024-10-05-Calculus-Summary.md
_posts/PV/: 2024-02-12-Other PV Problem.md
posts/data_analysis/customer_segmentation/: index.ipynb
posts/data_analysis/data_analysis_thinking/: index.ipynb
posts/statistics/: index.ipynb
