[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "ffmpeg==1.4",
    "jupyter==1.1.1",
    "matplotlib==3.10.8",
    "pandas==3.0.1",
    "plotly==6.5.2",
    "scipy==1.17.0",
    "scipy-stubs~=1.17.0",
    "seaborn==0.13.2",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
